--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1>Can you test this button for me?</h1>
-	<div class="butt">Press</div>
+	<div class="butt">CLICK!!!</div>
 
 
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
